finish flex layout for site

--- a/index.html
+++ b/index.html
@@ -3,9 +3,60 @@
   <head>
     <meta charset="utf-8">
     <link rel="stylesheet" href="css/styles.css" type="text/css">
+    <link href='https://fonts.googleapis.com/css?family=Tulpen+One' rel='stylesheet' type='text/css'>
     <title>Album Art Exchange</title>
   </head>
   <body>
-
+    <div class="body">
+      <header>
+        <div class="logo">
+          <a href="#"><img src="img/aax-logo.png" alt="AAX Logo"></a>
+          <p>
+            Dedicated to collecting and sharing meticulously scanned and edited album cover art,<br>for those of us who are ridiculously obsessive about such things.
+          </p>
+        </div>
+      </header>
+      <div class="advertisement">
+        <img src="img/aax-fundraiser-banner.jpg" alt="fundraiser"/>
+      </div>
+      <div class="content">
+        <div class="sidebar-left">
+          <a href="#">gallery</a>
+          <a href="#">forums</a>
+          <a href="#">blog</a>
+        </div>
+        <div class="sidebar-right">
+          <a href="#">about</a>
+          <a href="#">artists</a>
+          <a href="#">requests</a>
+        </div>
+        <div class="container">
+          <a href="#"><img src="img/will-smith-big-willie-style.jpg" alt="Album | Will Smith Big Willie Style"/></a>
+          <a href="#"><img src="img/pink-floyd-darkside-of-the-moon.jpg" alt="Album | Pink Floyd The Dark Side of the Moon"/></a>
+          <a href="#"><img src="img/no-doubt-01.jpg" alt="Album | No Doubt Tragic Kingdom"/></a>
+          <a href="#"><img src="img/janis-joplin-pearl-sessions.jpg" alt="Album | Janis Joplin The Pearl Sessions"/></a>
+          <a href="#"><img src="img/prince-purple-rain.jpg" alt="Album | Prince Purple Rain"/></a>
+          <a href="#"><img src="img/a-tribe-called-quest-beats-rhymes-life.jpg" alt="Album | A Tribe Called Quest Beats, Rhymes, and Life"/></a>
+          <a href="#"><img src="img/james-brown-there-it-is.jpg" alt="Album | James Brown There It Is"/></a>
+          <a href="#"><img src="img/dr-dre-chronic-2001.jpg" alt="Album | Dr. Dre 2001"/></a>
+          <a href="#"><img src="img/weezer-weezer-blue.jpg" alt="Album | Weezer Weezer (Blue)"/></a>
+        </div>
+      </div>
+      <div class="available">
+        <p>
+          398090 images available
+        </p>
+        <div class="search">
+          <input class="input-add-on-field">
+          <button class="input-add-on-item">Search</button>
+          <button class="input-add-on-item">Again</button>
+        </div>
+      </div>
+      <div class="footer">
+        <a href="#"><img src="img/aax-youtube-homepage.gif" alt="youtube"/></a>
+        <a href="#"><img src="img/aax-facebook-homepage.gif" alt="facebook"/></a>
+        <a href="#"><img src="img/aax-twitter-homepage.gif" alt="twitter"/></a>
+      </div>
+    </div>
   </body>
 </html>
