add font awesome script and add FA icon to clear button

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <link rel="stylesheet" href="css/styles.css" type="text/css">
     <link href='https://fonts.googleapis.com/css?family=Tulpen+One' rel='stylesheet' type='text/css'>
+    <script src="https://use.fontawesome.com/2a03477620.js"></script>
     <title>Album Art Exchange</title>
   </head>
   <body>
@@ -49,7 +50,7 @@
         <div class="search">
           <input class="input-add-on-field">
           <button class="input-add-on-item">Search</button>
-          <button class="input-add-on-item">Again</button>
+          <button class="input-add-on-item"><i class="fa fa-long-arrow-left" aria-hidden="true"></i> Clear</button>
         </div>
       </div>
       <div class="footer">
